testsuite/tests/interpreter_errors/func_wrong_named_arg/test.out
script.lkql:3:11: error: Unknown argument name: z
3 | add(x=21, z=21)
  |           ^
